<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_userList"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView_search"
        android:hint="enter the name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_toStartOf="@id/button_search"
        android:layout_below="@id/toolbar_userList"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/toolbar_userList"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textView_totalCount"
        tools:text="Total Count : 100000"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/autoCompleteTextView_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_userList"
        tools:listitem="@layout/item_userlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView_totalCount"/>

</RelativeLayout>